discussion/kv_engine/170266/170266_rev21_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: FollyExecutorPool cancel tasks in cpuPool queue

Add a mechanism to remove work for a given taskable from the
cpuPool queue.

This is implemented by interposing our own queue of work underneath
the queue in the cpuPool to allow us to remove tasks from the queue
when we unregister a taskable. Now, when we schedule a task we
enqueue it in a queue in a custom executor and schedule a task on the
base executor to pop a task from the queue and run it. To remove tasks
when we unregister a taskable we pop all elements of our queue and
re-push only those of the other taskables and manually cancel each
task for the taskable going away.

Change-Id: Idcbf1737b80c3d3b92ed62adb3d4d164a2cf4266

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-10 18:07:13.000000000
Message: 
Uploaded patch set 21.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-10 18:39:13.000000000
Message: 
Patch Set 21: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15503/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15503/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15503/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43807/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_magma_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_magma_full_eviction
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1701): error: Expected equality of these values:
  cb::engine_errc::would_block
    Which is: would block
  getKeyFn(key_2)
    Which is: no memory
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1704): error: Expected equality of these values:
  cb::engine_errc::no_such_key
    Which is: no such key
  getKeyFn(key_2)
    Which is: no memory
Key with TTL:20 should be removed.
[  FAILED  ] EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_magma_full_eviction, where GetParam() = ("persistent_magma", "full_eviction") (69 ms)
EphemeralOrPersistent/STExpiryPagerTest.MB_25671/persistent_magma_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43807/ )

Failure of an engine_testapp test:

<pre>
Running [0036/0044]: test CAS regeneration seqno...(41 ms) OK


99% tests passed, 2 tests failed out of 421

Total Test time (real) = 233.40 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43807/ )

Timeout of a CTest test 421/421 Test #303: ep_testsuite_xdcr.value_eviction.comp_active ..................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43807/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14345/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36939/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5212/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5151/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17545/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17237/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18279/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25644/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16320/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-10 19:06:35.000000000
Message: 
Patch Set 21:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15503/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15503/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15503/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43808/ : FAILURE

Timeout of a CTest test 421/421 Test  #70: ep-engine_ep_unit_tests.DurabilityRespondAmbiguousTest ........................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43808/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14345/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36939/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5212/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5151/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17545/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17237/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18279/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25644/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16320/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
